实现展示页样式变换、抽屉

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -4,3 +4,7 @@ $secondary-color: #fecea8;
 $text-color-1: white;
 
 $tab-bar-height: 3rem;
+
+$like-color: #e73a56;
+$favorite-color: #fbb306;
+$share-color: rgb(66, 66, 174);
