--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,17 @@
 :root {
     border: 0;
     margin: 0;
-}
-
-html {
-    border: 0;
-    margin: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body {
     border: 0;
     margin: 0;
     background-color: $text-color-2;
+    overflow: hidden;
 }
 
 * {
