--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -2,6 +2,7 @@ $text-color-2: #272d30;
 $primary-color: #e84a5f;
 $secondary-color: #fecea8;
 $text-color-1: white;
+$text-color-3:black;
 
 $tab-bar-height: 3rem;
 
