将其余的三页框架搭建起来，而且还重构了项目架构，组件之间的关系更加合理

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,10 +1,14 @@
-$text-color-2: #272d30;
+$text-color-2: #28292d;
 $primary-color: #e84a5f;
 $secondary-color: #fecea8;
-$text-color-1: white;
-$text-color-3:black;
+$text-color-1: #e3e3e3;
+$text-color-4: #e3e3e3a3;
 
-$tab-bar-height: 3rem;
+$text-color-3: black;
+$tiktok-text-color-1: #656565;
+$tiktok-background-color-1: #161616;
+
+$tab-bar-height: 3.5rem;
 
 $like-color: #e73a56;
 $favorite-color: #fbb306;
