通过本地剧集数据查找与请求接口的改造使用，实现了收藏tab的数据展示。
构建了剧集页的框架。
由于没有请求剧集信息的接口，只能本地化剧集信息，再使用剧集请求接口来实现。
本质上应该将这两个Pinia合一的，但是之前使用的结构有点复杂，我不想改怕Bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -206,6 +206,32 @@ body {
         }
     }
 
+    .tab-header {
+        .el-tabs__header {
+            .el-tabs__nav-wrap.is-top::after {
+                color: $text-color-4;
+                opacity: 0.5;
+            }
+
+            .el-tabs__active-bar {
+                background-color: $primary-color;
+                opacity: 0.9;
+            }
+            .el-tabs__item {
+                margin: 5px 0;
+                opacity: 0.7;
+                height: 70px;
+                font-weight: bold;
+                color: $text-color-4;
+
+                font-size: 1rem;
+                &.is-active {
+                    color: $primary-color;
+                }
+            }
+        }
+    }
+
     /* 隐藏默认的滚动条样式 */
     scrollbar-width: none !important;
     /* Firefox */
