修改剧集页的展示，重新设计不同的卡片，切换收藏，喜欢等功能。
剧集页将内容改换为喜欢、收藏、历史等分类。修改剧集页的展示，观看历史使用平铺三列，其余卡片保持横条，分别做收藏和喜欢按钮。改了keepalive组件写法

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -13,3 +13,5 @@ $tab-bar-height: 3.5rem;
 $like-color: #e73a56;
 $favorite-color: #fbb306;
 $share-color: rgb(66, 66, 174);
+
+$episode-height: 115px;
