--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,18 +37,20 @@ body {
         div.normal {
             margin: 0px 10px;
             padding: 0 5px;
-            border: 1.5px $text-color-4 solid;
+            border: 2.5px $text-color-4 solid;
             border-radius: 100px;
             opacity: 0.7;
+            font-weight: bold;
         }
 
         div.coll {
             color: $like-color !important;
             margin: 0px 10px;
             padding: 0 5px;
-            border: 1.5px $like-color solid !important;
+            border: 2.5px $like-color solid !important;
             border-radius: 100px;
             opacity: 1;
+            font-weight: bold;
         }
     }
 
@@ -87,18 +89,20 @@ body {
                         div.normal {
                             margin: 0px 10px;
                             padding: 0 5px;
-                            border: 1.5px $text-color-4 solid;
+                            border: 2.5px $text-color-4 solid;
                             border-radius: 100px;
                             opacity: 0.7;
+                            font-weight: bold;
                         }
 
                         div.coll {
                             color: $favorite-color;
                             margin: 0px 10px;
                             padding: 0 5px;
-                            border: 1.5px $favorite-color solid;
+                            border: 2.5px $favorite-color solid;
                             border-radius: 100px;
                             opacity: 0.7;
+                            font-weight: bold;
                         }
                     }
                     .content {
