初步完成详情页
从所有的卡片点击，均会进入详情页。详情页可以进行机会对剧集的所有操作。和抽屉很像，抽屉添加按钮，详情按钮。添加返回按钮

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -15,3 +15,6 @@ $favorite-color: #fbb306;
 $share-color: rgb(66, 66, 174);
 
 $episode-height: 115px;
+
+$page-height: 550px;
+$detail-top-height: 250px;
